# FabricaNeeds_Back_Equipe5

./: README.md  build.sh  env_exemplo.txt  limpar.py  pyproject.toml  requirements.txt
config/: settings.py  urls.py
fabricaNeeds/: admin.py  apps.py  signals.py
fabricaNeeds/migrations/: 0001_initial.py  0002_alter_contribuicoes_options.py  0003_contribuinte_alter_contribuicoes_contribuinte.py  0004_contribuicoes_data.py  0005_total.py  0006_alter_total_options_retiradas.py  0007_estoque.py  0008_retirarestoque.py  0009_alter_retirarestoque_options_retirarestoque_produto.py  0010_demandas.py  0011_entradasestoque.py  0012_alter_demandas_produto.py  0013_alter_demandas_produto.py  0014_alter_demandas_produto.py  0015_contribuinte_senha.py  0016_alter_contribuinte_cpf_alter_contribuinte_nome_and_more.py  0017_remove_contribuinte_senha.py  0018_contribuinte_senha.py  0019_remove_contribuinte_cpf.py  0020_delete_contribuicoes.py
fabricaNeeds/models/: __init__.py  contribuicoes.py  demandas.py  entradasEstoque.py  estoque.py  retiradas.py  retirarEstoque.py  total.py
fabricaNeeds/serializers/: __init__.py  contribuicoes.py  demandas.py  entradasEstoque.py  estoque.py  login.py  retiradas.py  retirarEstoque.py  total.py
fabricaNeeds/views/: __init__.py  contribuicoes.py  demandas.py  entradasEstoque.py  estoque.py  login.py  retiradas.py  retirarEstoque.py  total.py
